# AI-Powered-ChatBot

./: .gitignore  README  README.md  backup_main_app.py  main_app.py  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
cli/: commands.py
core/docstring_engine/: generator.py  llm_integration.py
core/parser/: python_parser.py
core/reporter/: coverage_reporter.py
core/validator/: validator.py
dashboard_ui/: dashboard.py
examples/: sample_a.py  sample_b.py
experiments/: llm_groq.py  llm_local.py  visual.ipynb  visual_1.ipynb
storage/: review_logs.json
storage/reports/: pytest_results.json
tests/: test_coverage_reporter.py  test_dashboard.py  test_generator.py  test_llm_integration.py  test_parser.py  test_validation.py
