[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-powered-code-reviewer"
version = "0.1.0"
description = "AI-powered code review and docstring quality assistant"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "pytest",
    "radon",
    "pydocstyle",
    "langchain",
]

[project.scripts]
ai-reviewer = "main_app:main"